Bug 1173715 - Removed the bottom border off of the search-panel-current-engine element and removed the check to see if the search suggestions is collapsed, r=florian.
UltraBlame original commit: ef2b5e2a78672c228e42529ca181fdfae714fb1b

--- a/browser/themes/linux/searchbar.css
+++ b/browser/themes/linux/searchbar.css
@@ -555,17 +555,26 @@ border
 -
 bottom
 :
+none
+;
+}
+.
+search
+-
+panel
+-
+tree
+{
+border
+-
+top
+:
 1px
 solid
-rgba
-(
-0
-0
-0
-0
-.
-2
-)
+#
+ccc
+!
+important
 ;
 }
 .
@@ -605,32 +614,6 @@ padding
 color
 :
 MenuText
-;
-}
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-panel
--
-header
-{
-border
--
-top
-:
-none
 ;
 }
 .
