--- a/browser/themes/windows/searchbar.css
+++ b/browser/themes/windows/searchbar.css
@@ -806,10 +806,26 @@ border
 -
 bottom
 :
+none
+;
+}
+.
+search
+-
+panel
+-
+tree
+{
+border
+-
+top
+:
 1px
 solid
 #
 ccc
+!
+important
 ;
 }
 .
@@ -858,32 +874,6 @@ color
 :
 #
 666
-;
-}
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-panel
--
-header
-{
-border
--
-top
-:
-none
 ;
 }
 .
